--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ div {
 }
 button {
     border-radius: 8px;
-    border: 1px solid transparent;
+    border: 1px inset solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
